<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:weightSum="6"
    android:gravity="bottom"
    android:background="@color/mainBlue">
    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        
        <TextView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/app_name"
            android:textColor="@color/mainGreen"
            android:textSize="80sp"
            android:textStyle="bold"
            android:layout_marginTop="150dp"
            android:gravity="center"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:padding="20dp">
        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/backgroundWhite"
            android:textSize="20sp"
            android:background="@color/mainGreen"
            />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/backgroundWhite"
            android:textSize="20sp"
            android:background="@color/mainGreen"/>

    </LinearLayout>





</LinearLayout>