<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    style="@style/AppTheme.NoActionBar"
    android:background="@color/backgroundWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="475dp">
        <LinearLayout
            android:background="@drawable/buttonstyleithgradient"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/appName"
                android:fontFamily="@font/robotoslab_medium"
                android:textColor="@color/backgroundWhite"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:background="@drawable/circle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/profile_pic_round"
                    app:civ_border_color="@color/backgroundWhite"
                    app:civ_border_width="5dp" />

            </LinearLayout>


            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lewis Grant"
                android:fontFamily="@font/robotoslab_regular"
                android:id="@+id/addNameTxt"
                android:textColor="@color/backgroundWhite"
                android:textStyle="bold"
                android:textSize="40sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/status_cards"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friends"
                        android:textColor="@color/darkText"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:fontFamily="@font/robotoslab_medium"
                        />

                    <TextView
                        android:id="@+id/txtCoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="0"
                        android:textColor="@color/darkText"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/status_cards"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/books"
                        android:textColor="@color/darkText"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:fontFamily="@font/robotoslab_medium"
                        />

                    <TextView
                        android:id="@+id/txtNumReceived"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="0"
                        android:textColor="@color/darkText"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/status_cards"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wishlist"
                        android:textColor="@color/darkText"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:fontFamily="@font/robotoslab_medium"
                        />

                    <TextView
                        android:id="@+id/txtBank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="0"
                        android:textColor="@color/darkText"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <androidx.cardview.widget.CardView
                android:id="@+id/parent_layout"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/murder_on_the_orient_express" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="300dp"
                android:layout_height="180dp"
                android:background="@drawable/rounded_corners"
                android:layout_marginLeft="70dp" />
            
            <TextView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="120dp"
                android:text="Bio:"
                android:textColor="@color/backgroundWhite"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="30dp"
                android:text="Add Bio..."
                android:textSize="20sp"
                android:textColor="@color/backgroundWhite"/>

            <ImageView
                android:layout_width="400dp"
                android:layout_height="1dp"
                android:layout_marginTop="100dp"
                android:background="@color/backgroundWhite"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="Last Read:"
                android:textStyle="bold"
                android:textColor="@color/darkText"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="110dp"/>

            <TextView
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:textColor="@color/darkText"
                android:text="Insert Book Title..."
                android:layout_marginLeft="120dp"
                android:layout_marginTop="130dp"/>


        </RelativeLayout>

    </LinearLayout>



</LinearLayout>